Fixed project page on mobile version

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -537,7 +537,7 @@
     margin: auto;
     margin-bottom: 10px;
 
-    @media (max-width: 686px) {
+    @media (max-width: 960px) {
         width: 100%;
         padding: 0;
         background: none;
